--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
       <nav>
         <a href="index.html">
-          <p><span>Web</span>Studio</p>
+          <p><span class="logo1">Web</span>Studio</p>
         </a>
         <ul>
           <li><a href="">Студия</a></li>
@@ -145,7 +145,7 @@
     <!-- Футер -->
     <footer>
       <a href="index.html">
-        <p><span>Web</span>Studio</p>
+        <p><span class="logo1">Web</span><span class="logo2">Studio</span></p>
       </a>
       <address>
         г. Киев, пр-т Леси Украинки, 26<br /><a href="mailto:info@example.com"
