--- a/portfolio.html
+++ b/portfolio.html
@@ -11,11 +11,11 @@
     <header>
       <nav>
         <a href="index.html">
-          <p><span>Web</span>Studio</p>
+          <p><span class="logo1">Web</span>Studio</p>
         </a>
         <ul>
           <li><a href="">Студия</a></li>
-          <li><a href="">Портфолио</a></li>
+          <li><a href="./portfolio.html">Портфолио</a></li>
           <li><a href="">Контакты</a></li>
         </ul>
       </nav>
@@ -40,7 +40,7 @@
     <!-- Футер -->
     <footer>
       <a href="index.html">
-        <p><span class="logo">Web</span>Studio</p>
+        <p><span class="logo1">Web</span><span class="logo2">Studio</span></p>
       </a>
       <address>
         г. Киев, пр-т Леси Украинки, 26<br /><a href="mailto:info@example.com"
