--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Гланая</title>
+    <link rel="stylesheet" href="./css/common.css">
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
@@ -11,25 +12,25 @@
     <header>
       <nav>
         <a href="index.html">
-          <p><span class="logo1">Web</span>Studio</p>
+          <p lang="eng"><span class="logo-part-one">Web</span><span class="logo-part-two">Studio</span></p>
         </a>
-        <ul>
-          <li><a href="">Студия</a></li>
-          <li><a href="./portfolio.html">Портфолио</a></li>
-          <li><a href="">Контакты</a></li>
+        <ul class="site-nav list">
+          <li><a href="./index.html" class="link current">Студия</a></li>
+          <li><a href="./portfolio.html" class="link">Портфолио</a></li>
+          <li><a href="" class="link">Контакты</a></li>
         </ul>
       </nav>
-      <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+      <ul class="auth-nav list">
+        <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com"</a></li>
+        <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
       </ul>
     </header>
     <main>
       <!-- Главный контейнер -->
-      <section>
+      <section class="hero">
         <!-- Герой! -->
-        <h1>Эффективные решения <br />для вашего бизнеса</h1>
-        <a href="">Заказать услугу</a>
+        <h1 class="hero-title">Эффективные решения <br />для вашего бизнеса</h1>
+        <a href="" class="hero-link">Заказать услугу</a>
       </section>
       <!-- Наши преимущества -->
       <section>
@@ -145,13 +146,12 @@
     <!-- Футер -->
     <footer>
       <a href="index.html">
-        <p><span class="logo1">Web</span><span class="logo2">Studio</span></p>
+        <p lang="eng"><span class="logo-part-one">Web</span><span class="logo-parttwo-footer">Studio</span></p>
       </a>
       <address>
-        г. Киев, пр-т Леси Украинки, 26<br /><a href="mailto:info@example.com"
-          >info@example.com</a
-        ><br />
-        <a href="tel:+380991111111">+38 099 111 11 11</a>
+        г. Киев, пр-т Леси Украинки, 26<br />
+        <a href="mailto:info@example.com" class="auth-footer">info@example.com</a><br />
+        <a href="tel:+380991111111" class="auth-footer">+38 099 111 11 11</a>
       </address>
     </footer>
   </body>
