--- a/portfolio.html
+++ b/portfolio.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Портфолио</title>
+    <link rel="stylesheet" href="./css/common.css">
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
@@ -11,17 +12,17 @@
     <header>
       <nav>
         <a href="index.html">
-          <p><span class="logo1">Web</span>Studio</p>
+          <p lang="eng"><span class="logo-part-one">Web</span><span class="logo-part-two">Studio</span></p>
         </a>
-        <ul>
-          <li><a href="">Студия</a></li>
-          <li><a href="./portfolio.html">Портфолио</a></li>
-          <li><a href="">Контакты</a></li>
+        <ul class="site-nav list">
+          <li><a href="./index.html" class="link">Студия</a></li>
+          <li><a href="./portfolio.html" class="link current">Портфолио</a></li>
+          <li><a href="" class="link">Контакты</a></li>
         </ul>
       </nav>
-      <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+      <ul class="auth-nav list">
+        <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com"</a></li>
+        <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
       </ul>
     </header>
     <main>
@@ -36,11 +37,25 @@
           <li><button>Маркетинг</button></li>
         </ul>
       </section>
+      <!-- Примеры работ -->
+      <section>
+      <ul class="portfolio">    
+          <li><img src="./images/poject1.jpg" alt="Изображение примера веб-сайта" width="370" height="294"><h2>Технокряк</h2><h3>Веб-сайт</h3></li>
+          <li><img src="/images/poject2.jpg" alt="Изображение примера дизайна" width="370" height="294"><h2>Постер <span lang="en">New Orlean vs Golden Star</span></h2><h3>Дизайн</h3></li>
+          <li><img src="/images/poject3.jpg" alt="Изображение примера приложения" width="370" height="294"><h2>Ресторан <span lang="en">Seafood</span></h2><h3>Приложение</h3></li>
+          <li><img src="/images/poject4.jpg" alt="Изображение примера маркетинга" width="370" height="294"><h2>Проект <span lang="en">Prime</span></h2><h3>Маркетинг</h3></li>
+          <li><img src="/images/poject5.jpg" alt="Изображение примера приложения" width="370" height="294"><h2>Проект <span lang="en">Boxes</span></h2><h3>Приложение</h3></li>
+          <li><img src="/images/poject6.jpg" alt="Изображение примера веб-сайта" width="370" height="294"><h2 lang="en">Inspiration has no Borders</h2><h3>Веб-сайт</h3></li>
+          <li><img src="/images/poject7.jpg" alt="Изображение примера дизайна" width="370" height="294"><h2>Издание <span lang="en">Limited Edition</span></h2><h3>Дизайн</h3></li>
+          <li><img src="/images/poject8.jpg" alt="Изображение примера маркетинга" width="370" height="294"><h2>Проект LAB</h2><h3>Маркетинг</h3></li>
+          <li><img src="/images/poject9.jpg" alt="Изображение примера приложения" width="370" height="294"><h2 lang="en">Growing Business</h2><h3>Приложение</h3></li>
+        </ul>
+      </section>
     </main>
     <!-- Футер -->
     <footer>
       <a href="index.html">
-        <p><span class="logo1">Web</span><span class="logo2">Studio</span></p>
+        <p lang="eng"><span class="logo-part-one">Web</span><span class="logo-parttwo-footer">Studio</span></p>
       </a>
       <address>
         г. Киев, пр-т Леси Украинки, 26<br /><a href="mailto:info@example.com"
