--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </ul>
       </nav>
       <ul class="auth-nav list">
-        <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com"</a></li>
+        <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
         <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
       </ul>
     </header>
@@ -30,7 +30,7 @@
       <section class="hero">
         <!-- Герой! -->
         <h1 class="hero-title">Эффективные решения <br />для вашего бизнеса</h1>
-        <a href="" class="hero-link">Заказать услугу</a>
+        <a href="" class="button primary">Заказать услугу</a>
       </section>
       <!-- Наши преимущества -->
       <section>
@@ -122,7 +122,7 @@
           </li>
           <li>
             <img
-              src="./images/Marketing.jpg"
+              src="./images/marketing.jpg"
               width="270"
               height="260"
               alt="Фото маркетолога"
