--- a/portfolio.html
+++ b/portfolio.html
@@ -21,7 +21,7 @@
         </ul>
       </nav>
       <ul class="auth-nav list">
-        <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com"</a></li>
+        <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
         <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
       </ul>
     </header>
@@ -40,15 +40,15 @@
       <!-- Примеры работ -->
       <section>
       <ul class="portfolio">    
-          <li><img src="./images/poject1.jpg" alt="Изображение примера веб-сайта" width="370" height="294"><h2>Технокряк</h2><h3>Веб-сайт</h3></li>
-          <li><img src="/images/poject2.jpg" alt="Изображение примера дизайна" width="370" height="294"><h2>Постер <span lang="en">New Orlean vs Golden Star</span></h2><h3>Дизайн</h3></li>
-          <li><img src="/images/poject3.jpg" alt="Изображение примера приложения" width="370" height="294"><h2>Ресторан <span lang="en">Seafood</span></h2><h3>Приложение</h3></li>
-          <li><img src="/images/poject4.jpg" alt="Изображение примера маркетинга" width="370" height="294"><h2>Проект <span lang="en">Prime</span></h2><h3>Маркетинг</h3></li>
-          <li><img src="/images/poject5.jpg" alt="Изображение примера приложения" width="370" height="294"><h2>Проект <span lang="en">Boxes</span></h2><h3>Приложение</h3></li>
-          <li><img src="/images/poject6.jpg" alt="Изображение примера веб-сайта" width="370" height="294"><h2 lang="en">Inspiration has no Borders</h2><h3>Веб-сайт</h3></li>
-          <li><img src="/images/poject7.jpg" alt="Изображение примера дизайна" width="370" height="294"><h2>Издание <span lang="en">Limited Edition</span></h2><h3>Дизайн</h3></li>
-          <li><img src="/images/poject8.jpg" alt="Изображение примера маркетинга" width="370" height="294"><h2>Проект LAB</h2><h3>Маркетинг</h3></li>
-          <li><img src="/images/poject9.jpg" alt="Изображение примера приложения" width="370" height="294"><h2 lang="en">Growing Business</h2><h3>Приложение</h3></li>
+          <li><img src="./images/poject1.jpg" alt="Изображение примера веб-сайта" width="370" height="294"><h2>Технокряк</h2><p>Веб-сайт</p></li>
+          <li><img src="/images/poject2.jpg" alt="Изображение примера дизайна" width="370" height="294"><h2>Постер <span lang="en">New Orlean vs Golden Star</span></h2><p>Дизайн</p></li>
+          <li><img src="/images/poject3.jpg" alt="Изображение примера приложения" width="370" height="294"><h2>Ресторан <span lang="en">Seafood</span></h2><p>Приложение</p></li>
+          <li><img src="/images/poject4.jpg" alt="Изображение примера маркетинга" width="370" height="294"><h2>Проект <span lang="en">Prime</span></h2><p>Маркетинг</p></li>
+          <li><img src="/images/poject5.jpg" alt="Изображение примера приложения" width="370" height="294"><h2>Проект <span lang="en">Boxes</span></h2><p>Приложение</p></li>
+          <li><img src="/images/poject6.jpg" alt="Изображение примера веб-сайта" width="370" height="294"><h2 lang="en">Inspiration has no Borders</h2><p>Веб-сайт</p></li>
+          <li><img src="/images/poject7.jpg" alt="Изображение примера дизайна" width="370" height="294"><h2>Издание <span lang="en">Limited Edition</span></h2><p>Дизайн</p></li>
+          <li><img src="/images/poject8.jpg" alt="Изображение примера маркетинга" width="370" height="294"><h2>Проект LAB</h2><p>Маркетинг</p></li>
+          <li><img src="/images/poject9.jpg" alt="Изображение примера приложения" width="370" height="294"><h2 lang="en">Growing Business</h2><p>Приложение</p></li>
         </ul>
       </section>
     </main>
