--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
       <nav>
         <a href="index.html">
-          <p lang="eng"><span class="logo-part-one">Web</span><span class="logo-part-two">Studio</span></p>
+          <p lang="en"><span class="logo-part-one">Web</span><span class="logo-part-two">Studio</span></p>
         </a>
         <ul class="site-nav list">
           <li><a href="./index.html" class="link current">Студия</a></li>
@@ -146,7 +146,7 @@
     <!-- Футер -->
     <footer>
       <a href="index.html">
-        <p lang="eng"><span class="logo-part-one">Web</span><span class="logo-parttwo-footer">Studio</span></p>
+        <p lang="en"><span class="logo-part-one">Web</span><span class="logo-parttwo-footer">Studio</span></p>
       </a>
       <address>
         г. Киев, пр-т Леси Украинки, 26<br />
