--- a/portfolio.html
+++ b/portfolio.html
@@ -12,7 +12,7 @@
     <header>
       <nav>
         <a href="index.html">
-          <p lang="eng"><span class="logo-part-one">Web</span><span class="logo-part-two">Studio</span></p>
+          <p lang="en"><span class="logo-part-one">Web</span><span class="logo-part-two">Studio</span></p>
         </a>
         <ul class="site-nav list">
           <li><a href="./index.html" class="link">Студия</a></li>
@@ -41,21 +41,21 @@
       <section>
       <ul class="portfolio">    
           <li><img src="./images/poject1.jpg" alt="Изображение примера веб-сайта" width="370" height="294"><h2>Технокряк</h2><p>Веб-сайт</p></li>
-          <li><img src="/images/poject2.jpg" alt="Изображение примера дизайна" width="370" height="294"><h2>Постер <span lang="en">New Orlean vs Golden Star</span></h2><p>Дизайн</p></li>
-          <li><img src="/images/poject3.jpg" alt="Изображение примера приложения" width="370" height="294"><h2>Ресторан <span lang="en">Seafood</span></h2><p>Приложение</p></li>
-          <li><img src="/images/poject4.jpg" alt="Изображение примера маркетинга" width="370" height="294"><h2>Проект <span lang="en">Prime</span></h2><p>Маркетинг</p></li>
-          <li><img src="/images/poject5.jpg" alt="Изображение примера приложения" width="370" height="294"><h2>Проект <span lang="en">Boxes</span></h2><p>Приложение</p></li>
-          <li><img src="/images/poject6.jpg" alt="Изображение примера веб-сайта" width="370" height="294"><h2 lang="en">Inspiration has no Borders</h2><p>Веб-сайт</p></li>
-          <li><img src="/images/poject7.jpg" alt="Изображение примера дизайна" width="370" height="294"><h2>Издание <span lang="en">Limited Edition</span></h2><p>Дизайн</p></li>
-          <li><img src="/images/poject8.jpg" alt="Изображение примера маркетинга" width="370" height="294"><h2>Проект LAB</h2><p>Маркетинг</p></li>
-          <li><img src="/images/poject9.jpg" alt="Изображение примера приложения" width="370" height="294"><h2 lang="en">Growing Business</h2><p>Приложение</p></li>
+          <li><img src="./images/poject2.jpg" alt="Изображение примера дизайна" width="370" height="294"><h2>Постер <span lang="en">New Orlean vs Golden Star</span></h2><p>Дизайн</p></li>
+          <li><img src="./images/poject3.jpg" alt="Изображение примера приложения" width="370" height="294"><h2>Ресторан <span lang="en">Seafood</span></h2><p>Приложение</p></li>
+          <li><img src="./images/poject4.jpg" alt="Изображение примера маркетинга" width="370" height="294"><h2>Проект <span lang="en">Prime</span></h2><p>Маркетинг</p></li>
+          <li><img src="./images/poject5.jpg" alt="Изображение примера приложения" width="370" height="294"><h2>Проект <span lang="en">Boxes</span></h2><p>Приложение</p></li>
+          <li><img src="./images/poject6.jpg" alt="Изображение примера веб-сайта" width="370" height="294"><h2 lang="en">Inspiration has no Borders</h2><p>Веб-сайт</p></li>
+          <li><img src="./images/poject7.jpg" alt="Изображение примера дизайна" width="370" height="294"><h2>Издание <span lang="en">Limited Edition</span></h2><p>Дизайн</p></li>
+          <li><img src="./images/poject8.jpg" alt="Изображение примера маркетинга" width="370" height="294"><h2>Проект LAB</h2><p>Маркетинг</p></li>
+          <li><img src="./images/poject9.jpg" alt="Изображение примера приложения" width="370" height="294"><h2 lang="en">Growing Business</h2><p>Приложение</p></li>
         </ul>
       </section>
     </main>
     <!-- Футер -->
     <footer>
       <a href="index.html">
-        <p lang="eng"><span class="logo-part-one">Web</span><span class="logo-parttwo-footer">Studio</span></p>
+        <p lang="en"><span class="logo-part-one">Web</span><span class="logo-parttwo-footer">Studio</span></p>
       </a>
       <address>
         г. Киев, пр-т Леси Украинки, 26<br /><a href="mailto:info@example.com"
