--- a/index.html
+++ b/index.html
@@ -5,15 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Гланая</title>
     <link rel="stylesheet" href="./css/common.css" />
-    <link rel="stylesheet" href="./css/styles.css" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap" />
+    <link rel="stylesheet" href="./css/main.css" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap"
+    />
   </head>
   <body>
     <!-- Шапка сайта -->
     <header>
       <nav>
-        <a href="index.html">
-          <p lang="en"><span class="logo-part-one">Web</span><span class="logo-part-two">Studio</span></p>
+        <a href="index.html" class="logo">
+          <p lang="en"><span class="accent">Web</span>Studio</p>
         </a>
         <ul class="site-nav list">
           <li><a href="./index.html" class="link current">Студия</a></li>
@@ -22,7 +25,11 @@
         </ul>
       </nav>
       <ul class="auth-nav list">
-        <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
+        <li>
+          <a href="mailto:info@devstudio.com" class="link"
+            >info@devstudio.com</a
+          >
+        </li>
         <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
       </ul>
     </header>
@@ -33,34 +40,34 @@
         <h1 class="hero-title">Эффективные решения <br />для вашего бизнеса</h1>
         <a href="" class="button primary">Заказать услугу</a>
       </section>
-      <!-- Наши преимущества -->
-      <section>
-        <h2>Наши преимущества</h2>
+      <!-- Наши особенности (сделать невидимый заголовок!) -->
+      <section class="features">
+        <h2>Особенности</h2>
         <ul>
           <li>
-            <h3>Внимание к деталям</h3>
-            <p>
+            <h3 class="title">Внимание к деталям</h3>
+            <p class="text">
               Идейные соображения, а также начало повседневной работы по
               формированию позиции.
             </p>
           </li>
           <li>
-            <h3>Пунктуальность</h3>
-            <p>
+            <h3 class="title">Пунктуальность</h3>
+            <p class="text">
               Задача организации, в особенности же рамки и место обучения кадров
               влечет за собой.
             </p>
           </li>
           <li>
-            <h3>Планирование</h3>
-            <p>
+            <h3 class="title">Планирование</h3>
+            <p class="text">
               Равным образом консультация с широким активом в значительной
               степени обуславливает.
             </p>
           </li>
           <li>
-            <h3>Современные технологии</h3>
-            <p>
+            <h3 class="title">Современные технологии</h3>
+            <p class="text">
               Значимость этих проблем настолько очевидна, что реализация
               плановых заданий.
             </p>
@@ -68,8 +75,8 @@
         </ul>
       </section>
       <!-- Чем мы занимаемся -->
-      <section>
-        <h2>Чем мы занимаемся</h2>
+      <section class="what-we-do">
+        <h2 class="title">Чем мы занимаемся</h2>
         <ul>
           <li>
             <img
@@ -98,8 +105,8 @@
         </ul>
       </section>
       <!-- Наша команда -->
-      <section>
-        <h2>Наша команда</h2>
+      <section class="team">
+        <h2 class="title">Наша команда</h2>
         <ul>
           <li>
             <img
@@ -108,8 +115,8 @@
               height="260"
               alt="Фото дизайнера продукта"
             />
-            <h3>Игорь Демьяненко</h3>
-            <p lang="en">Product Designer</p>
+            <h3 class="name">Игорь Демьяненко</h3>
+            <p lang="en" class="biz">Product Designer</p>
           </li>
           <li>
             <img
@@ -118,8 +125,8 @@
               height="260"
               alt="Фото фронтенд разработчика"
             />
-            <h3>Ольга Репина</h3>
-            <p lang="en">Frontend Developer</p>
+            <h3 class="name">Ольга Репина</h3>
+            <p lang="en" class="biz">Frontend Developer</p>
           </li>
           <li>
             <img
@@ -128,8 +135,8 @@
               height="260"
               alt="Фото маркетолога"
             />
-            <h3>Николай Тарасов</h3>
-            <p lang="en">Marketing</p>
+            <h3 class="name">Николай Тарасов</h3>
+            <p lang="en" class="biz">Marketing</p>
           </li>
           <li>
             <img
@@ -138,20 +145,25 @@
               height="260"
               alt="Фото ЮИ дизайнера"
             />
-            <h3>Михаил Ермаков</h3>
-            <p lang="en">UI Designer</p>
+            <h3 class="name">Михаил Ермаков</h3>
+            <p lang="en" class="biz">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
     <!-- Футер -->
     <footer>
-      <a href="index.html">
-        <p lang="en"><span class="logo-part-one">Web</span><span class="logo-parttwo-footer">Studio</span></p>
+      <a href="index.html" class="logo">
+        <p lang="en">
+          <span class="accent">Web</span
+          ><span class="accent-footer">Studio</span>
+        </p>
       </a>
-      <address>
+      <address class="adds">
         г. Киев, пр-т Леси Украинки, 26<br />
-        <a href="mailto:info@example.com" class="auth-footer">info@example.com</a><br />
+        <a href="mailto:info@example.com" class="auth-footer"
+          >info@example.com</a
+        ><br />
         <a href="tel:+380991111111" class="auth-footer">+38 099 111 11 11</a>
       </address>
     </footer>
