--- a/portfolio.html
+++ b/portfolio.html
@@ -5,18 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Портфолио</title>
     <link rel="stylesheet" href="./css/common.css" />
-    <link rel="stylesheet" href="./css/styles.css" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap" />
+    <link rel="stylesheet" href="./css/portfolio.css" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap"
+    />
   </head>
   <body>
     <!-- Шапка сайта -->
     <header>
       <nav>
-        <a href="index.html">
-          <p lang="eng">
-            <span class="logo-part-one">Web</span
-            ><span class="logo-part-two">Studio</span>
-          </p>
+        <a href="index.html" class="logo">
+          <p lang="en"><span class="accent">Web</span>Studio</p>
         </a>
         <ul class="site-nav list">
           <li><a href="./index.html" class="link">Студия</a></li>
@@ -44,111 +44,132 @@
           <li><button tupe="button">Дизайн</button></li>
           <li><button tupe="button">Маркетинг</button></li>
         </ul>
-      <!-- Примеры работ -->
+        <!-- Примеры работ -->
         <ul class="portfolio">
-          <li><a href="">
-            <img
-              src="./images/poject1.jpg"
-              alt="Изображение примера веб-сайта"
-              width="370"
-              height="294"
-            />
-            <h2>Технокряк</h2>
-            <p>Веб-сайт</p></a>
+          <li>
+            <a href="">
+              <img
+                src="./images/poject1.jpg"
+                alt="Изображение примера веб-сайта"
+                width="370"
+                height="294"
+              />
+              <h2>Технокряк</h2>
+              <p>Веб-сайт</p></a
+            >
           </li>
-          <li><a href="">
-            <img
-              src="/images/poject2.jpg"
-              alt="Изображение примера дизайна"
-              width="370"
-              height="294"
-            />
-            <h2>Постер <span lang="en">New Orlean vs Golden Star</span></h2>
-            <p>Дизайн</p></a>
+          <li>
+            <a href="">
+              <img
+                src="./images/poject2.jpg"
+                alt="Изображение примера дизайна"
+                width="370"
+                height="294"
+              />
+              <h2>Постер <span lang="en">New Orlean vs Golden Star</span></h2>
+              <p>Дизайн</p></a
+            >
           </li>
-          <li><a href="">
-            <img
-              src="/images/poject3.jpg"
-              alt="Изображение примера приложения"
-              width="370"
-              height="294"
-            />
-            <h2>Ресторан <span lang="en">Seafood</span></h2>
-            <p>Приложение</p></a>
+          <li>
+            <a href="">
+              <img
+                src="./images/poject3.jpg"
+                alt="Изображение примера приложения"
+                width="370"
+                height="294"
+              />
+              <h2>Ресторан <span lang="en">Seafood</span></h2>
+              <p>Приложение</p></a
+            >
           </li>
-          <li><a href="">
-            <img
-              src="/images/poject4.jpg"
-              alt="Изображение примера маркетинга"
-              width="370"
-              height="294"
-            />
-            <h2>Проект <span lang="en">Prime</span></h2>
-            <p>Маркетинг</p></a>
+          <li>
+            <a href="">
+              <img
+                src="./images/poject4.jpg"
+                alt="Изображение примера маркетинга"
+                width="370"
+                height="294"
+              />
+              <h2>Проект <span lang="en">Prime</span></h2>
+              <p>Маркетинг</p></a
+            >
           </li>
-          <li><a href="">
-            <img
-              src="/images/poject5.jpg"
-              alt="Изображение примера приложения"
-              width="370"
-              height="294"
-            />
-            <h2>Проект <span lang="en">Boxes</span></h2>
-            <p>Приложение</p></a>
+          <li>
+            <a href="">
+              <img
+                src="./images/poject5.jpg"
+                alt="Изображение примера приложения"
+                width="370"
+                height="294"
+              />
+              <h2>Проект <span lang="en">Boxes</span></h2>
+              <p>Приложение</p></a
+            >
           </li>
-          <li><a href="">
-            <img
-              src="/images/poject6.jpg"
-              alt="Изображение примера веб-сайта"
-              width="370"
-              height="294"
-            />
-            <h2 lang="en">Inspiration has no Borders</h2>
-            <p>Веб-сайт</p></a>
+          <li>
+            <a href="">
+              <img
+                src="./images/poject6.jpg"
+                alt="Изображение примера веб-сайта"
+                width="370"
+                height="294"
+              />
+              <h2 lang="en">Inspiration has no Borders</h2>
+              <p>Веб-сайт</p></a
+            >
           </li>
-          <li><a href="">
-            <img
-              src="/images/poject7.jpg"
-              alt="Изображение примера дизайна"
-              width="370"
-              height="294"
-            />
-            <h2>Издание <span lang="en">Limited Edition</span></h2>
-            <p>Дизайн</p></a>
+          <li>
+            <a href="">
+              <img
+                src="./images/poject7.jpg"
+                alt="Изображение примера дизайна"
+                width="370"
+                height="294"
+              />
+              <h2>Издание <span lang="en">Limited Edition</span></h2>
+              <p>Дизайн</p></a
+            >
           </li>
-          <li><a href="">
-            <img
-              src="/images/poject8.jpg"
-              alt="Изображение примера маркетинга"
-              width="370"
-              height="294"
-            />
-            <h2>Проект LAB</h2>
-            <p>Маркетинг</p></a>
+          <li>
+            <a href="">
+              <img
+                src="./images/poject8.jpg"
+                alt="Изображение примера маркетинга"
+                width="370"
+                height="294"
+              />
+              <h2>Проект LAB</h2>
+              <p>Маркетинг</p></a
+            >
           </li>
-          <li><a href="">
-            <img
-              src="/images/poject9.jpg"
-              alt="Изображение примера приложения"
-              width="370"
-              height="294"
-            />
-            <h2 lang="en">Growing Business</h2>
-            <p>Приложение</p></a>
+          <li>
+            <a href="">
+              <img
+                src="./images/poject9.jpg"
+                alt="Изображение примера приложения"
+                width="370"
+                height="294"
+              />
+              <h2 lang="en">Growing Business</h2>
+              <p>Приложение</p></a
+            >
           </li>
         </ul>
       </section>
     </main>
     <!-- Футер -->
     <footer>
-      <a href="index.html">
-        <p lang="en"><span class="logo-part-one">Web</span><span class="logo-parttwo-footer">Studio</span></p>
+      <a href="index.html" class="logo">
+        <p lang="en">
+          <span class="accent">Web</span
+          ><span class="accent-footer">Studio</span>
+        </p>
       </a>
-      <address>
-        г. Киев, пр-т Леси Украинки, 26<br /><a href="mailto:info@example.com"
+      <address class="adds">
+        г. Киев, пр-т Леси Украинки, 26<br /><a href="mailto:info@example.com" class="auth-footer"
           >info@example.com</a
         ><br />
-        <a href="tel:+380991111111">+38 099 111 11 11</a>
+        <a href="tel:+380991111111" class="auth-footer">+38 099 111 11 11</a>
       </address>
     </footer>
   </body>
