--- a/portfolio.html
+++ b/portfolio.html
@@ -37,12 +37,12 @@
       <!-- Кнопки-фильтры -->
       <section>
         <h1>Портфолио</h1>
-        <ul>
-          <li><button tupe="button">Все</button></li>
-          <li><button tupe="button">Веб-сайты</button></li>
-          <li><button tupe="button">Приложения</button></li>
-          <li><button tupe="button">Дизайн</button></li>
-          <li><button tupe="button">Маркетинг</button></li>
+        <ul class="filters">
+          <li><button tupe="button" class="link current">Все</button></li>
+          <li><button tupe="button" class="link">Веб-сайты</button></li>
+          <li><button tupe="button" class="link">Приложения</button></li>
+          <li><button tupe="button" class="link">Дизайн</button></li>
+          <li><button tupe="button" class="link">Маркетинг</button></li>
         </ul>
         <!-- Примеры работ -->
         <ul class="portfolio">
@@ -166,7 +166,9 @@
         </p>
       </a>
       <address class="adds">
-        г. Киев, пр-т Леси Украинки, 26<br /><a href="mailto:info@example.com" class="auth-footer"
+        г. Киев, пр-т Леси Украинки, 26<br /><a
+          href="mailto:info@example.com"
+          class="auth-footer"
           >info@example.com</a
         ><br />
         <a href="tel:+380991111111" class="auth-footer">+38 099 111 11 11</a>
