--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap"
     />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap"
+    />
   </head>
   <body>
     <!-- Шапка сайта -->
@@ -42,7 +46,7 @@
       </section>
       <!-- Наши особенности (сделать невидимый заголовок!) -->
       <section class="features">
-        <h2>Особенности</h2>
+        <h2 hidden="true">Особенности</h2>
         <ul>
           <li>
             <h3 class="title">Внимание к деталям</h3>
