--- a/portfolio.html
+++ b/portfolio.html
@@ -10,6 +10,10 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap"
     />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap"
+    />
   </head>
   <body>
     <!-- Шапка сайта -->
@@ -27,8 +31,7 @@
       <ul class="auth-nav list">
         <li>
           <a href="mailto:info@devstudio.com" class="link"
-            >info@devstudio.com</a
-          >
+            >info@devstudio.com</a>
         </li>
         <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
       </ul>
@@ -36,7 +39,7 @@
     <main>
       <!-- Кнопки-фильтры -->
       <section>
-        <h1>Портфолио</h1>
+        <h1 hidden="true">Портфолио</h1>
         <ul class="filters">
           <li><button tupe="button" class="link current">Все</button></li>
           <li><button tupe="button" class="link">Веб-сайты</button></li>
